[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Levels/WinScene.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/DefaultFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/UI/CountLabel.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 3 )

[node name="WinScene" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="VBoxContainer" parent="."]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 216.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="CenterContainer"]
margin_right = 384.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.156863, 1, 0, 1 )
text = "YOU WON"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsLabel" type="Label" parent="CenterContainer"]
margin_top = 20.0
margin_right = 384.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 120, -48 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.898039, 0, 1, 1 )
text = "Press ESC to quit
Press R to return to main menu"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeroesKilledLabel" type="Label" parent="CenterContainer"]
margin_top = 78.0
margin_right = 384.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 120, -48 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 1, 0, 1 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
labelText = "Heroes transmuted"

[node name="RetriesLabel" type="Label" parent="CenterContainer"]
margin_top = 90.0
margin_right = 384.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 120, -48 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 1, 0, 1 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
labelText = "Retries"

[node name="HeroEnteredLabel" type="Label" parent="CenterContainer"]
margin_top = 102.0
margin_right = 384.0
margin_bottom = 110.0
rect_pivot_offset = Vector2( 120, -48 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.156863, 1, 0, 1 )
align = 1
valign = 1
autowrap = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
labelText = "Heroes entered"
